--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 .container {
   max-width: 1320px;
   margin: 0 auto;
@@ -6,6 +7,32 @@
 * {
   text-decoration: none;
   list-style: none;
+}
+
+.dark {
+  background: black;
+  color: white !important;
+}
+
+.dark * {
+  color: white !important;
+  background-color: black !important;
+}
+.dark * #burger_menu {
+  color: wheat;
+}
+.dark * svg {
+  fill: white;
+  color: white !important;
+}
+
+#light-dark {
+  border-radius: 20px;
+  border: none;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
 }
 
 .text {
@@ -908,7 +935,7 @@ header nav .nav_items .nav-btn .burger_menu {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 120px;
+  gap: 60px;
   padding: 120px 0;
 }
 .listAll .footer .footer-col .img {
@@ -918,7 +945,7 @@ header nav .nav_items .nav-btn .burger_menu {
 }
 .listAll .footer .footer-col h1 {
   font-family: Roboto;
-  font-size: 16px;
+  font-size: 24px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0em;
@@ -974,6 +1001,27 @@ header nav .nav_items .nav-btn .burger_menu {
   margin-left: 35%;
   margin-top: 5%;
   color: white;
+}
+
+#backtop {
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 900;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.2);
+  color: #333;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  position: fixed;
+  right: 20px;
+  bottom: -50px;
+  cursor: pointer;
+  z-index: 99;
+  transition: 0.6s;
 }
 
 @media only screen and (max-width: 999px) {
@@ -1034,9 +1082,18 @@ header nav .nav_items .nav-btn .burger_menu {
   }
 }
 @media only screen and (max-width: 480px) {
+  .text .text-all {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+    margin-top: -20px;
+    flex-wrap: wrap;
+  }
   header nav .nav_items .nav-items {
     align-items: center;
-    width: 100%;
+    width: 50%;
+    background-color: white;
   }
   .all {
     background-color: #f7f5f5;
@@ -1290,5 +1347,24 @@ header nav .nav_items .nav-btn .burger_menu {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+  }
+  #backtop {
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: 900;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.2);
+    color: #333;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    position: fixed;
+    bottom: -50px;
+    cursor: pointer;
+    z-index: 99;
+    transition: 0.6s;
   }
 }/*# sourceMappingURL=style.css.map */
