--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 .container{
     max-width: 1320px;
     margin:  0 auto;
@@ -5,6 +8,30 @@
 *{
     text-decoration: none;
    list-style: none;
+}
+
+.dark  {
+  background: black;
+  color: white !important;
+}
+
+.dark  * {
+  color: white !important;
+  background-color: black !important;
+  #burger_menu{
+   color: wheat;
+  }
+  svg{
+   fill: white;
+    color:white !important;
+  }
+}
+#light-dark{
+  border-radius: 20px;
+  border: none;
+}
+body{
+  font-family: "Roboto", sans-serif;
 }
 
 .text{
@@ -1037,7 +1064,7 @@ margin-top: -15px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-   gap: 120px;
+   gap: 60px;
    padding: 120px 0;
 
     .footer-col{
@@ -1050,7 +1077,7 @@ margin-top: -15px;
       }
       h1{
         font-family: Roboto;
-        font-size: 16px;
+        font-size: 24px;
         font-weight: 400;
         line-height: 24px;
         letter-spacing: 0em;
@@ -1121,6 +1148,26 @@ margin-top: -15px;
        }
     }
   }
+}
+#backtop {
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 900;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.2);
+  color: #333;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  position: fixed;
+  right: 20px;
+  bottom: -50px;
+  cursor: pointer;
+  z-index: 99;
+  transition: 0.6s;
 }
 
 
@@ -1209,13 +1256,24 @@ margin-top: -15px;
     }
   }
   @media only screen and (max-width: 480px) {
+    .text{
+      .text-all{
+         display: flex;
+         justify-content: space-around;
+         align-items: center;
+         gap: 20px;
+         margin-top: -20px;
+         flex-wrap: wrap;
+       }
+     }
     header {
       nav {
         .nav_items {
 
           .nav-items {
             align-items: center;
-            width: 100%;
+            width: 50%;
+            background-color: white;
           }
         }
       }
@@ -1544,6 +1602,25 @@ margin-top: -15px;
            }
         }
       }
+    }
+    #backtop {
+      text-decoration: none;
+      font-size: 24px;
+      font-weight: 900;
+      background-color: rgb(255, 255, 255);
+      box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.2);
+      color: #333;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+      position: fixed;
+      bottom: -50px;
+      cursor: pointer;
+      z-index: 99;
+      transition: 0.6s;
     }
 
   }
